2020-04-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

        * vignettes/rmd/Rcpp-libraries.Rmd: Add new vignette source
        * vignettes/rmd/Rcpp.bib: Complete references
        * inst/bib/Rcpp.bib: Idem

2020-04-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-04-25  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/sugar/functions/sample.h: Replace R_alloc() with
        a standard vector allocation to reduce memory consumption in sample

        * docker/ci/Dockerfile: Update for R 4.0.0 (with a temporary
        diversion to rocker/r-base:4.0.0, and all-source installations)

        * vignettes/rmd/Makefile: Add bibtex call to JSS 2011 paper builds

2020-04-16  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-04-15  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/String.h: Avoid 'debug' namespace collisions
        * inst/include/Rcpp/macros/debug.h: Idem
        * inst/include/Rcpp/macros/macros.h: Idem

2020-04-15  Uwe Korn  <mail@uwekorn.com>

        * inst/include/Rcpp/DataFrame.h: Explicit call to scalar std::abs

2020-04-11  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-04-10  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/macros/macros.h: Safer definition of short_file_name
        * inst/include/Rcpp/String.h: Idem
        * inst/include/Rcpp/macros/debug.h: Idem
        * src/api.cpp: Idem

2020-04-10  Dirk Eddelbuettel  <edd@debian.org>

        * inst/tinytest/test_exceptions.R: Skip parts of file if on Solaris

2020-04-02  Dirk Eddelbuettel  <edd@debian.org>
