@@ -1,3 +1,8 @@
+2020-05-17  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/String.h: don't preserve returned SEXP in wrap
+	* inst/include/RcppCommon.h: simplify
+
 2020-04-30  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version
